@@ -13,9 +13,9 @@ import org.junit.jupiter.api.Test;
 import no.nav.foreldrepenger.behandlingslager.behandling.repository.BehandlingRepositoryProvider;
 import no.nav.foreldrepenger.behandlingslager.testutilities.behandling.AbstractTestScenario;
 import no.nav.foreldrepenger.behandlingslager.testutilities.behandling.ScenarioMorSøkerEngangsstønad;
-import no.nav.foreldrepenger.domene.json.StandardJsonConfig;
 import no.nav.foreldrepenger.domene.registerinnhenting.impl.Endringskontroller;
 import no.nav.foreldrepenger.domene.typer.AktørId;
+import no.nav.vedtak.mapper.json.DefaultJsonMapper;
 
 class RegisterdataInnhenterTest {
 
@@ -80,11 +80,11 @@ class RegisterdataInnhenterTest {
             }
             """;
         var fikset = json.replace("&#34;", "\"");
-        var deser = StandardJsonConfig.fromJson(fikset, PleipengerOversetter.PleiepengerOpplysninger.class);
+        var deser = DefaultJsonMapper.fromJson(fikset, PleipengerOversetter.PleiepengerOpplysninger.class);
 
         assertThat(deser.pleietrengende()).isEqualTo(new AktørId("9999999999999"));
         assertThat(deser.innleggelsesPerioder()).hasSize(1);
-        assertThat(deser.innleggelsesPerioder().get(0).fom()).isEqualTo(LocalDate.of(2021,5,3));
+        assertThat(deser.innleggelsesPerioder().getFirst().fom()).isEqualTo(LocalDate.of(2021,5,3));
     }
 
     private RegisterdataEndringshåndterer lagRegisterdataInnhenter(AbstractTestScenario<?> scenario) {
