@@ -38,7 +38,6 @@ import no.nav.foreldrepenger.dbstoette.JpaExtension;
 import no.nav.foreldrepenger.domene.feed.FeedRepository;
 import no.nav.foreldrepenger.domene.feed.FpVedtakUtgåendeHendelse;
 import no.nav.foreldrepenger.domene.feed.HendelseCriteria;
-import no.nav.foreldrepenger.domene.json.StandardJsonConfig;
 import no.nav.foreldrepenger.domene.person.PersoninfoAdapter;
 import no.nav.foreldrepenger.domene.tid.VirkedagUtil;
 import no.nav.foreldrepenger.domene.typer.AktørId;
@@ -47,6 +46,7 @@ import no.nav.foreldrepenger.kontrakter.feed.vedtak.v1.ForeldrepengerEndret;
 import no.nav.foreldrepenger.kontrakter.feed.vedtak.v1.ForeldrepengerInnvilget;
 import no.nav.foreldrepenger.kontrakter.feed.vedtak.v1.ForeldrepengerOpphoert;
 import no.nav.foreldrepenger.kontrakter.feed.vedtak.v1.Meldingstype;
+import no.nav.vedtak.mapper.json.DefaultJsonMapper;
 
 @Execution(ExecutionMode.CONCURRENT)
 @ExtendWith(JpaExtension.class)
@@ -93,10 +93,10 @@ class HendelsePublisererTjenesteTest {
         var alle = hentUtgåendeHendelser(behandling.getAktørId());
 
         assertThat(alle).hasSize(1);
-        assertThat(alle.get(0).getType()).isEqualTo(Meldingstype.FORELDREPENGER_OPPHOERT.getType());
-        assertThat(alle.get(0).getKildeId()).isEqualTo(VEDTAK_PREFIX + vedtak.getId().toString());
-        var opphørt = StandardJsonConfig.fromJson(alle.get(0).getPayload(), ForeldrepengerOpphoert.class);
-        assertThat(opphørt.getAktoerId()).isEqualTo(alle.get(0).getAktørId()).isNotNull();
+        assertThat(alle.getFirst().getType()).isEqualTo(Meldingstype.FORELDREPENGER_OPPHOERT.getType());
+        assertThat(alle.getFirst().getKildeId()).isEqualTo(VEDTAK_PREFIX + vedtak.getId().toString());
+        var opphørt = DefaultJsonMapper.fromJson(alle.getFirst().getPayload(), ForeldrepengerOpphoert.class);
+        assertThat(opphørt.getAktoerId()).isEqualTo(alle.getFirst().getAktørId()).isNotNull();
         assertThat(opphørt.getFnr()).isEqualTo(FNR);
         assertThat(opphørt.getFoersteStoenadsdag()).isEqualTo(INNVILGET_PERIODE_FØRSTE_DAG);
         assertThat(opphørt.getSisteStoenadsdag()).isEqualTo(INNVILGET_PERIODE_SISTE_DAG);
@@ -125,10 +125,10 @@ class HendelsePublisererTjenesteTest {
         var alle = hentUtgåendeHendelser(behandling.getAktørId());
 
         assertThat(alle).hasSize(1);
-        assertThat(alle.get(0).getType()).isEqualTo(Meldingstype.FORELDREPENGER_INNVILGET.getType());
-        assertThat(alle.get(0).getKildeId()).isEqualTo(VEDTAK_PREFIX + vedtak.getId().toString());
-        var innvilget = StandardJsonConfig.fromJson(alle.get(0).getPayload(), ForeldrepengerInnvilget.class);
-        assertThat(innvilget.getAktoerId()).isEqualTo(alle.get(0).getAktørId()).isNotNull();
+        assertThat(alle.getFirst().getType()).isEqualTo(Meldingstype.FORELDREPENGER_INNVILGET.getType());
+        assertThat(alle.getFirst().getKildeId()).isEqualTo(VEDTAK_PREFIX + vedtak.getId().toString());
+        var innvilget = DefaultJsonMapper.fromJson(alle.getFirst().getPayload(), ForeldrepengerInnvilget.class);
+        assertThat(innvilget.getAktoerId()).isEqualTo(alle.getFirst().getAktørId()).isNotNull();
         assertThat(innvilget.getFnr()).isEqualTo(FNR);
         assertThat(innvilget.getFoersteStoenadsdag()).isEqualTo(INNVILGET_PERIODE_FØRSTE_DAG);
         assertThat(innvilget.getSisteStoenadsdag()).isEqualTo(INNVILGET_PERIODE_SISTE_DAG);
@@ -165,10 +165,10 @@ class HendelsePublisererTjenesteTest {
         var alle = hentUtgåendeHendelser(behandling.getAktørId());
 
         assertThat(alle).hasSize(1);
-        assertThat(alle.get(0).getType()).isEqualTo(Meldingstype.FORELDREPENGER_ENDRET.getType());
-        assertThat(alle.get(0).getKildeId()).isEqualTo(VEDTAK_PREFIX + vedtak.getId().toString());
-        var endret = StandardJsonConfig.fromJson(alle.get(0).getPayload(), ForeldrepengerEndret.class);
-        assertThat(endret.getAktoerId()).isEqualTo(alle.get(0).getAktørId()).isNotNull();
+        assertThat(alle.getFirst().getType()).isEqualTo(Meldingstype.FORELDREPENGER_ENDRET.getType());
+        assertThat(alle.getFirst().getKildeId()).isEqualTo(VEDTAK_PREFIX + vedtak.getId().toString());
+        var endret = DefaultJsonMapper.fromJson(alle.getFirst().getPayload(), ForeldrepengerEndret.class);
+        assertThat(endret.getAktoerId()).isEqualTo(alle.getFirst().getAktørId()).isNotNull();
         assertThat(endret.getFnr()).isEqualTo(FNR);
         assertThat(endret.getFoersteStoenadsdag()).isEqualTo(NY_PERIODE_FØRSTE_DAG);
         assertThat(endret.getSisteStoenadsdag()).isEqualTo(NY_PERIODE_SISTE_DAG);
@@ -190,10 +190,10 @@ class HendelsePublisererTjenesteTest {
         var alle = hentUtgåendeHendelser(behandling.getAktørId());
 
         assertThat(alle).hasSize(1);
-        assertThat(alle.get(0).getType()).isEqualTo(Meldingstype.FORELDREPENGER_OPPHOERT.getType());
-        assertThat(alle.get(0).getKildeId()).isEqualTo(VEDTAK_PREFIX + vedtak.getId().toString());
-        var opphørt = StandardJsonConfig.fromJson(alle.get(0).getPayload(), ForeldrepengerOpphoert.class);
-        assertThat(opphørt.getAktoerId()).isEqualTo(alle.get(0).getAktørId()).isNotNull();
+        assertThat(alle.getFirst().getType()).isEqualTo(Meldingstype.FORELDREPENGER_OPPHOERT.getType());
+        assertThat(alle.getFirst().getKildeId()).isEqualTo(VEDTAK_PREFIX + vedtak.getId().toString());
+        var opphørt = DefaultJsonMapper.fromJson(alle.getFirst().getPayload(), ForeldrepengerOpphoert.class);
+        assertThat(opphørt.getAktoerId()).isEqualTo(alle.getFirst().getAktørId()).isNotNull();
         assertThat(opphørt.getFnr()).isEqualTo(FNR);
         assertThat(opphørt.getFoersteStoenadsdag()).isEqualTo(INNVILGET_PERIODE_FØRSTE_DAG);
         assertThat(opphørt.getSisteStoenadsdag()).isEqualTo(INNVILGET_PERIODE_SISTE_DAG);
